RESOLVED FIXED310500
Fix missing memory fence in ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr::deref()
https://bugs.webkit.org/show_bug.cgi?id=310500
Summary Fix missing memory fence in ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr::...
Chris Dumez
Reported 2026-03-22 18:47:56 PDT
Fix missing memory fence in ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr::deref().
Attachments
Chris Dumez
Comment 1 2026-03-22 18:52:21 PDT
EWS
Comment 2 2026-03-23 01:20:46 PDT
Committed 309739@main (3a7cb2ff43f8): <https://commits.webkit.org/309739@main> Reviewed commits have been landed. Closing PR #61130 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-23 01:21:12 PDT
EWS
Comment 4 2026-03-23 06:16:26 PDT
Committed 305413.552@safari-7624-branch (729da9dac89b): <https://commits.webkit.org/305413.552@safari-7624-branch> Reviewed commits have been landed. Closing PR #4785 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.